Virtual threads example and md